[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "101_future"
path = "chapter3/101_future.rs"

[[bin]]
name = "103_async"
path = "chapter3/103_async.rs"

[[bin]]
name = "107_move"
path = "chapter3/107_move.rs"

[dependencies]
futures = "0.3.21"
